fix: Fix click on buttons with SVG on Safari
Click events weren’t triggered on *some* buttons with SVG (icons). It
was the case for menu buttons (i.e. three dots icon). This seems to fix
the bug and shouldn’t have problematic side-effects.

Reference: https://stackoverflow.com/a/29814882

--- a/src/assets/stylesheets/_icons.css
+++ b/src/assets/stylesheets/_icons.css
@@ -1,3 +1,7 @@
+svg {
+    pointer-events: none;
+}
+
 .icon {
     display: inline-block;
     width: 1.5em;
